@@ -565,7 +565,10 @@ generic_packetizer_c::set_video_stereo_mode_impl(EbmlMaster &video,
                                                  stereo_mode_c::mode stereo_mode) {
   GetChildAs<KaxVideoStereoMode, EbmlUInteger>(video) = stereo_mode;
   bool previous_stereo_mode                           = g_stereo_mode_used;
-  g_stereo_mode_used                                  = true;
+
+  if (   (stereo_mode_c::mono        != stereo_mode)
+      && (stereo_mode_c::unspecified != stereo_mode))
+    g_stereo_mode_used = true;
 
   if (!previous_stereo_mode)
     rerender_ebml_head();
