@@ -68,7 +68,7 @@ T_218theora:59986cbebb1a61762c16ae591ae8c345-88d9297a7f549c68aea49c3b4abf007a:pa
 T_219srt_short_timecodes:1350b59f405cabe1107c752f009f2f2a:passed:20060926-112658:0.213195421
 T_220ass_with_comments_at_start:4aad786f675e15a5efd623cb8d822cff:passed:20060926-120101:0.839985533
 T_221aac_lc_misdetected_as_sbr:aec2d52214eb5ff0574cea97df1597d3:passed:20061103-174221:0.021446207
-T_222stereo_mode:34d9fa19579e3e6847d87f17ff2734a9-e3a34b71995f476b45c55f2cc8a47718-b36062c2d854ac9fe24cfa3eb4b355a7:passed:20061107-092251:5.282790646
+T_222stereo_mode:34d9fa19579e3e6847d87f17ff2734a9-e3a34b71995f476b45c55f2cc8a47718-b36062c2d854ac9fe24cfa3eb4b355a7-eb5a3217e74f17dac26a3f74d5631471:passed:20061107-092251:3.215570467
 T_223ra_cook_keyframes:08b7c346362512c20bb0eb3ab4b5756c:passed:20061228-150947:4.592656226
 T_224dts:82f463460ce940e845084511b7308445-c2e94ffc5db0b5e9ff80cd9df6991d01:passed:20070206-174735:3.294211551
 T_225dts_in_wav:c4dd95c4c03612f468761b4b376e0b20-bb4c0ecc736bf7858f4db724f6a5afce:passed:20070206-174726:5.474995493
